tests/baselines/reference/aliasErrors.errors.txt
tests/cases/compiler/aliasErrors.ts(13,12): error TS1003: Identifier expected.
tests/cases/compiler/aliasErrors.ts(14,12): error TS1003: Identifier expected.
tests/cases/compiler/aliasErrors.ts(15,12): error TS1003: Identifier expected.
tests/cases/compiler/aliasErrors.ts(11,1): error TS2304: Cannot find name 'no'.
tests/cases/compiler/aliasErrors.ts(12,1): error TS2304: Cannot find name 'no'.
tests/cases/compiler/aliasErrors.ts(16,1): error TS2304: Cannot find name 'undefined'.
tests/cases/compiler/aliasErrors.ts(26,10): error TS2305: Module 'foo.bar.baz' has no exported member 'bar'.


==== tests/cases/compiler/aliasErrors.ts (7 errors) ====
    module foo {    
        export class Provide {
        }
        export module bar { export module baz {export class boo {}}}
    }
    
    import provide = foo;
    import booz = foo.bar.baz;
    import beez = foo.bar;
    
    import m = no;
    ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'no'.
    import m2 = no.mod;
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'no'.
    import n = 5;
               ~
!!! error TS1003: Identifier expected.
    import o = "s";
               ~~~
!!! error TS1003: Identifier expected.
    import q = null;
               ~~~~
!!! error TS1003: Identifier expected.
    import r = undefined;
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'undefined'.
    
    
    var p = new provide.Provide();
    
    function use() {
        
      beez.baz.boo;
      var p1: provide.Provide; 
      var p2: foo.Provide;
      var p3:booz.bar;
             ~~~~~~~~
!!! error TS2305: Module 'foo.bar.baz' has no exported member 'bar'.
      var p22 = new provide.Provide();
    }
    
    